[tool.poetry]
name = "35-2nd-wnb-backend"
version = "0.0.1"
description = "after wecode wnb project self studying"
authors = ["eunhyung <ooooo5h91@gmail.com>"]
readme = "README.md"
packages = [{include = "35_2nd_wnb_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.0.6"
django-cors-headers = "3.13.0"
django-extensions = "^3.2.1"
mysqlclient = "2.1.1"
pymysql = "1.0.2"
boto3 = "1.24.48"
requests = "^2.28.1"
jwt = "^1.3.1"
bcrypt = "^4.0.1"
pyjwt = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
